0419_InsertAfter, InsertBefore를 적용한 요소 순환구조

--- a/style/style.css
+++ b/style/style.css
@@ -28,6 +28,12 @@ div.page {
 /* div.page */
 
 /* div.vis */
+div.vis  {
+    width: 204px;
+    height: 204px;
+    overflow: hidden;
+}
+
 div.vis img {
     border: 2px solid #000;
 }
@@ -35,10 +41,12 @@ div.vis img {
     position: absolute;
 }*/
 
+/*
 div.vis>div:not(:first-child) {
     display: none;
-    /*visibility: hidden;*/
+    visibility: hidden;
 }
+*/
 /* div.vis */
 
 
